src/test/ui/rfc1598-generic-associated-types/iterable.stderr
error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/iterable.rs:20:47
   |
LL |     type Iter<'a>: Iterator<Item = Self::Item<'a>>;
   |                                               ^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/iterable.rs:49:53
   |
LL | fn make_iter<'a, I: Iterable>(it: &'a I) -> I::Iter<'a> {
   |                                                     ^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/iterable.rs:54:60
   |
LL | fn get_first<'a, I: Iterable>(it: &'a I) -> Option<I::Item<'a>> {
   |                                                            ^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/iterable.rs:23:41
   |
LL |     fn iter<'a>(&'a self) -> Self::Iter<'a>;
   |                                         ^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/iterable.rs:32:41
   |
LL |     fn iter<'a>(&'a self) -> Self::Iter<'a> {
   |                                         ^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/iterable.rs:43:41
   |
LL |     fn iter<'a>(&'a self) -> Self::Iter<'a> {
   |                                         ^^ lifetime parameter not allowed

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0110`.
